--- a/siteCustomized.html
+++ b/siteCustomized.html
@@ -50,7 +50,7 @@
                 <div>服务保障    7*24小时，400客服   在线工单系统</div>
               </div>
               <div class="btn">
-                <a href="http://www.xinnet.com/jianzhan/jianzhan-buy-detail.html" target="_blank">
+                <a href="http://www.xinnet.com/jianzhan/jianzhan-buy-detail.html?name=dzjz&type=fourInOne" target="_blank">
                   <img src="./img/customized/img_03.png" alt="">
                 </a>
                 <a href="https://im.7x24cc.com/phone_webChat.html?accountId=N000000014613&chatId=816becd7-7ba1-4bf7-9883-9869fd3bcf48" target="_blank">
@@ -87,7 +87,7 @@
                 <div>服务保障    7*24小时，400客服   在线工单系统</div>
               </div>
               <div class="btn">
-                <a href="http://www.xinnet.com/jianzhan/jianzhan-buy-detail.html" target="_blank">
+                <a href="http://www.xinnet.com/jianzhan/jianzhan-buy-detail.html?name=dzjz&type=International" target="_blank">
                   <img src="./img/customized/img_03.png" alt="">
                 </a>
                 <a href="https://im.7x24cc.com/phone_webChat.html?accountId=N000000014613&chatId=816becd7-7ba1-4bf7-9883-9869fd3bcf48" target="_blank">
@@ -126,7 +126,7 @@
                 <div>服务保障    7*24小时，400客服   在线工单系统</div>
               </div>
               <div class="btn">
-                <a href="http://www.xinnet.com/jianzhan/jianzhan-buy-detail.html" target="_blank">
+                <a href="http://www.xinnet.com/jianzhan/jianzhan-buy-detail.html?name=dzjz&type=group" target="_blank">
                   <img src="./img/customized/img_03.png" alt="">
                 </a>
                 <a href="https://im.7x24cc.com/phone_webChat.html?accountId=N000000014613&chatId=816becd7-7ba1-4bf7-9883-9869fd3bcf48" target="_blank">
