--- a/siteHigh.html
+++ b/siteHigh.html
@@ -26,7 +26,7 @@
       <div class="cont">
         <h3>自始至终提供帮助</h3>
         <p>我们非常希望可以帮助到您，并和您一起工作，请联系我们专业的咨询顾问！</p>
-        <a href="#">联系我们</a>
+        <a href="https://im.7x24cc.com/phone_webChat.html?accountId=N000000014613&chatId=816becd7-7ba1-4bf7-9883-9869fd3bcf48" target="_blank">联系我们</a>
       </div>
     </div>
     <div class = "jzFc">
