--- a/siteTemp.html
+++ b/siteTemp.html
@@ -40,7 +40,7 @@
                   <sup>￥</sup>480 <span>/首年</span>
                 </div>
                 <div class="btn">
-                  <a href="http://www.xinnet.com/jianzhan/jianzhan-buy-detail.html" target="_blank" class="buy">立即购买</a>
+                  <a href="http://www.xinnet.com/jianzhan/jianzhan-buy-detail.html?name=zzjz&type=standard" target="_blank" class="buy">立即购买</a>
                 </div>
                 <p class="clear">
                   <a href="https://im.7x24cc.com/phone_webChat.html?accountId=N000000014613&chatId=816becd7-7ba1-4bf7-9883-9869fd3bcf48" target="_blank" class="l">
@@ -78,7 +78,7 @@
                   <sup>￥</sup>998 <span>/首年</span>
                 </div>
                 <div class="btn">
-                  <a href="http://www.xinnet.com/jianzhan/jianzhan-buy-detail.html" target="_blank" class="buy">立即购买</a>
+                  <a href="http://www.xinnet.com/jianzhan/jianzhan-buy-detail.html?name=zzjz&type=enterprise" target="_blank" class="buy">立即购买</a>
                 </div>
                 <p class="clear">
                   <a href="https://im.7x24cc.com/phone_webChat.html?accountId=N000000014613&chatId=816becd7-7ba1-4bf7-9883-9869fd3bcf48" target="_blank" class="l">
@@ -117,7 +117,7 @@
                   <sup>￥</sup>1988 <span>/首年</span>
                 </div>
                 <div class="btn">
-                  <a href="http://www.xinnet.com/jianzhan/jianzhan-buy-detail.html" target="_blank" class="buy">立即购买</a>
+                  <a href="http://www.xinnet.com/jianzhan/jianzhan-buy-detail.html?name=zzjz&type=market" target="_blank" class="buy">立即购买</a>
                 </div>
                 <p class="clear">
                   <a href="https://im.7x24cc.com/phone_webChat.html?accountId=N000000014613&chatId=816becd7-7ba1-4bf7-9883-9869fd3bcf48" target="_blank" class="l">
@@ -146,7 +146,7 @@
         </div>
         <div class="c">
           <video width="875" height="440" controls autobuffer poster="./img/temp/img_06.png">
-              <source src="https://www.zhangxinxu.com/study/media/cat2.mp4" type="video/mp4">
+              <!-- <source src="https://www.zhangxinxu.com/study/media/cat2.mp4" type="video/mp4"> -->
               您的浏览器不支持 video 标签。
           </video>
         </div>
