--- a/siteCustomized.html
+++ b/siteCustomized.html
@@ -31,23 +31,16 @@
               <p>适合内贸企业个性化展示设计定制需求</p>
             </div>
             <div class="c">
-              <b>定制建站 <span>pc+移动+微信+APP</span></b>
               <div class="list">
-                <div>建站顾问一对一服务，保障网站完美上线</div>
-                <div>设计师量身定制</div>
-                <div>页面制作（导航频道页/新闻/产品） 15个</div>
-                <div>终身免费售后修改 </div>
-                <div>SEO关键词设置</div>
-                <div>产品/服务/网站信息录入数量   60</div>
-              </div>
-              <b><span>服务保障</span></b>
-              <div class="list2">
-                <div>网站总空间    不限</div>
-                <div>SEO保障   百度不收录，全额退款 </div>
-                <div>网站CDN加速</div>
-                <div>可视化管理</div>
-                <div>网站备份    自动备份</div>
-                <div>服务保障    7*24小时，400客服   在线工单系统</div>
+                <div>覆盖多个互联网终端，PC+移动+微信+小程序+APP</div>
+                <div>专属方案，针对性设计，最前沿的设计风格</div>
+                <div>SEO服务，网站不收录不计费</div>
+                <div>快速捕获线索，及时汇集整理，高效商机转化 </div>
+                <div>全响应式管理操作，所见即所得</div>
+                <div>营销方式，高效推广，内容个性化，提升专属感</div>
+                <div>多种会员注册方式，分级管理，分权浏览</div>
+                <div>故障时长百倍赔偿</div>
+                <div>1年内12次免费维护</div>
               </div>
               <div class="btn">
                 <a href="http://www.xinnet.com/jianzhan/jianzhan-buy-detail.html?name=dzjz&type=fourInOne" target="_blank">
@@ -65,68 +58,19 @@
               <p>适合外贸企业个性化展示设计定制需求</p>
             </div>
             <div class="c">
-              <b>定制建站 <span>pc+移动+微信+APP</span></b>
               <div class="list">
-                <div>建站顾问一对一服务，保障网站完美上线</div>
-                <div>资深制作师设计师量身定制</div>
-                <div>页面制作（导航频道页/新闻/产品） 25个</div>
-                <div>SEO关键词设置</div>
-                <div>产品/服务/网站信息录入数量   100</div>
-                <div>网站栏目设计</div>
-                <div>终身免费售后修改 </div>
-                <div>系统更新/升级</div>
-              </div>
-              <b><span>服务保障</span></b>
-              <div class="list2">
-                <div>网站总空间    不限</div>
-                <div>SEO保障   百度不收录，全额退款 </div>
-                <div>网站CDN加速</div>
-                <div>可视化管理</div>
-                <div>资质保障：支持IPV6</div>
-                <div>网站备份    自动备份</div>
-                <div>服务保障    7*24小时，400客服   在线工单系统</div>
+                <div>一体化境外展示营销管理平台，助力企业全球营销</div>
+                <div>设计师一对一量身定制，本土化风格设计</div>
+                <div>覆盖多种小语种，提供专业级产品服务</div>
+                <div>海外部署，境内管理，全球加速</div>
+                <div>网站智能建设，语言、终端智能响应</div>
+                <div>支持外贸PayPal线上支付，并兼容多种线下支付</div>
+                <div>服务全程专业质控，保证高质高效服务 </div>
+                <div>故障时长百倍赔偿</div>
+                <div>1年内12次免费维护</div>
               </div>
               <div class="btn">
                 <a href="http://www.xinnet.com/jianzhan/jianzhan-buy-detail.html?name=dzjz&type=International" target="_blank">
-                  <img src="./img/customized/img_03.png" alt="">
-                </a>
-                <a href="https://im.7x24cc.com/phone_webChat.html?accountId=N000000014613&chatId=816becd7-7ba1-4bf7-9883-9869fd3bcf48" target="_blank">
-                  <img src="./img/customized/img_04.png" alt="">
-                </a>
-              </div>
-            </div>
-          </li>
-          <li>
-            <div class="t">
-              <strong>集团旗舰定制方案</strong>
-              <p>适合集团型企业个性化业务展示设计定制需求</p>
-            </div>
-            <div class="c">
-              <b>定制建站 <span>pc+移动+微信+APP</span></b>
-              <div class="list">
-                <div>建站顾问一对一服务，保障网站完美上线</div>
-                <div>首席设计师定制设计</div>
-                <div>页面、文章、产品、会员页设计</div>
-                <div>页面制作（导航频道页/新闻/产品） 40个</div>
-                <div>产品/服务/网站信息录入数量   200</div>
-                <div>网站栏目设计</div>
-                <div>SEO关键词设置</div>
-                <div>系统更新/升级 </div>
-                <div>终身免费售后修改 12次</div>
-              </div>
-              <b><span>服务保障</span></b>
-              <div class="list2">
-                <div>网站总空间    不限</div>
-                <div>SEO保障   百度不收录，全额退款 </div>
-                <div>网站CDN加速</div>
-                <div>可视化管理</div>
-                <div>资质保障：支持IPV6</div>
-                <div>网站资源保障：不限资源、不限带宽、不限流量</div>
-                <div>网站备份    自动备份   数据安全保证99.9999% </div>
-                <div>服务保障    7*24小时，400客服   在线工单系统</div>
-              </div>
-              <div class="btn">
-                <a href="http://www.xinnet.com/jianzhan/jianzhan-buy-detail.html?name=dzjz&type=group" target="_blank">
                   <img src="./img/customized/img_03.png" alt="">
                 </a>
                 <a href="https://im.7x24cc.com/phone_webChat.html?accountId=N000000014613&chatId=816becd7-7ba1-4bf7-9883-9869fd3bcf48" target="_blank">
@@ -144,37 +88,106 @@
         <table>
           <thead>
             <tr>
-              <th class="col1">设计服务套餐</th>
-              <th>时尚设计套餐</th>
-              <th>专业设计套餐</th>
-              <th>豪华设计套餐</th>
-              <th>尊享设计套餐</th>
+              <th class="col1"></th>
+              <th colspan="4" class="col4">四合一高端定制方案-设计服务</th>
+              <th colspan="4">国际贸易专属定制方案-设计服务</th>
             </tr>
           </thead>
           <tbody>
             <tr>
+              <td class="col1">服务项目</td>
+              <td>时尚设计套餐</td>
+              <td>专业设计套餐</td>
+              <td>豪华设计套餐</td>
+              <td class="col4">尊享设计套餐</td>
+              <td>时尚设计套餐</td>
+              <td>专业设计套餐</td>
+              <td>豪华设计套餐</td>
+              <td>尊享设计套餐</td>
+            </tr>
+            <tr>
+              <td class="col1">专业网站建设方案</td>
+              <td>√ </td>
+              <td>√ </td>
+              <td>√ </td>
+              <td class="col4">√ </td>
+              <td>√ </td>
+              <td>√ </td>
+              <td>√ </td>
+              <td>√ </td>
+            </tr>
+            <tr>
+              <td class="col1">设计师级别</td>
+              <td>高级设计师</td>
+              <td>资深设计师</td>
+              <td>资深设计师</td>
+              <td class="col4">首席设计师</td>
+              <td>高级设计师</td>
+              <td>资深设计师</td>
+              <td>资深设计师</td>
+              <td>首席设计师</td>
+            </tr>
+            <tr>
+              <td class="col1">制作开发</td>
+              <td>高级设计师</td>
+              <td>资深设计师</td>
+              <td>资深设计师</td>
+              <td class="col4">首席设计师</td>
+              <td>高级设计师</td>
+              <td>资深设计师</td>
+              <td>资深设计师</td>
+              <td>首席设计师</td>
+            </tr>
+            <tr>
               <td class="col1">网站栏目</td>
+              <td>6栏目</td>
+              <td>15栏目</td>
+              <td>25栏目</td>
+              <td class="col4">40栏目</td>
               <td>6栏目</td>
               <td>15栏目</td>
               <td>25栏目</td>
               <td>40栏目</td>
             </tr>
             <tr>
+              <td class="col1">创意风格设计</td>
+              <td>√ </td>
+              <td>√ </td>
+              <td>√ </td>
+              <td class="col4">√ </td>
+              <td>√ </td>
+              <td>√ </td>
+              <td>√ </td>
+              <td>√ </td>
+            </tr>
+            <tr>
+              <td class="col1">页面量身设计</td>
+              <td>√ </td>
+              <td>√ </td>
+              <td>√ </td>
+              <td class="col4">√ </td>
+              <td>√ </td>
+              <td>√ </td>
+              <td>√ </td>
+              <td>√ </td>
+            </tr>
+            <tr>
               <td class="col1">产品详情风格创意设计</td>
               <td>0个</td>
+              <td>1个</td>
+              <td>2个</td>
+              <td class="col4">3个</td>
               <td>0个</td>
-              <td>0个</td>
+              <td>1个</td>
+              <td>2个</td>
               <td>3个</td>
             </tr>
             <tr>
-              <td class="col1">页面设计制作数量</td>
-              <td>6个</td>
-              <td>15个</td>
-              <td>25个</td>
-              <td>40个</td>
-            </tr>
-            <tr>
               <td class="col1">轮播Banner设计数量</td>
+              <td>3个</td>
+              <td>5个</td>
+              <td>7个</td>
+              <td class="col4">10个</td>
               <td>3个</td>
               <td>5个</td>
               <td>7个</td>
@@ -182,20 +195,65 @@
             </tr>
             <tr>
               <td class="col1">图片处理（尺寸/水印）</td>
-              <td>20</td>
               <td>60</td>
               <td>100</td>
+              <td>150</td>
+              <td class="col4">200</td>
+              <td>60</td>
+              <td>100</td>
+              <td>150</td>
               <td>200</td>
             </tr>
             <tr>
               <td class="col1">产品/服务/网站信息录入数量</td>
-              <td>20</td>
               <td>60</td>
               <td>100</td>
+              <td>150</td>
+              <td class="col4">200</td>
+              <td>60</td>
+              <td>100</td>
+              <td>150</td>
               <td>200</td>
             </tr>
             <tr>
+              <td class="col1">网站运营使用培训 </td>
+              <td>√ </td>
+              <td>√ </td>
+              <td>√ </td>
+              <td class="col4">√ </td>
+              <td>√ </td>
+              <td>√ </td>
+              <td>√ </td>
+              <td>√ </td>
+            </tr>
+            <tr>
+              <td class="col1">SEO关键词设置</td>
+              <td>√ </td>
+              <td>√ </td>
+              <td>√ </td>
+              <td class="col4">√ </td>
+              <td>√ </td>
+              <td>√ </td>
+              <td>√ </td>
+              <td>√ </td>
+            </tr>
+            <tr>
+              <td class="col1">服务过程透明化</td>
+              <td>√ </td>
+              <td>√ </td>
+              <td>√ </td>
+              <td class="col4">√ </td>
+              <td>√ </td>
+              <td>√ </td>
+              <td>√ </td>
+              <td>√ </td>
+            </tr>
+            <tr>
               <td class="col1">终身免费售后修改</td>
+              <td>12次/年</td>
+              <td>12次/年</td>
+              <td>12次/年</td>
+              <td class="col4">12次/年</td>
               <td>12次/年</td>
               <td>12次/年</td>
               <td>12次/年</td>
