--- a/siteTemp.html
+++ b/siteTemp.html
@@ -14,30 +14,50 @@
     <div class="section section_02">
       <div class="row row1">
         <ul class="clear">
-          <li>
+          <li class="free">
             <div class="t">
-              <strong>标准版</strong>
-              <p>适合个人/小型企业需求企业</p>
+              <strong>免费版</strong>
             </div>
             <div class="c">
               <div class="list">
-                <div>免费千套模板（PC站+手机站）</div>
-                <div>页面数量20个</div>
-                <div>支持中、英、日、韩、德、西、法、意......等10种语言</div>
-                <div>含服务器空间 </div>
-                <div>产品管理功能</div>
-                <div>万能表单（调查问卷/招聘/报名/投票等）</div>
-                <div>支持整站及页面SEO设置 </div>
-                <div>网站CDN加速</div>
-                <div>网站总空间10G</div>
-                <div>安全服务保障</div>
+                <div>永久免费</div>
+                <div>模板任意选择</div>
+                <div>海量组件素材</div>
+                <div>基础展示功能 </div>
               </div>
               <div class="bt">
-                <div class="money2">
-                  698元/年
-                </div>
                 <div class="money">
-                  <sup>￥</sup>480 <span>/首年</span>
+                  <sup>￥</sup>0 <span>/年</span>
+                </div>
+                <div class="btn">
+                  <a href="http://www.xinnet.com/jianzhan/jianzhan-buy-detail.html?name=zzjz&type=standard" target="_blank" class="buy">立即体验</a>
+                </div>
+                <p class="clear">
+                  <a href="https://im.7x24cc.com/phone_webChat.html?accountId=N000000014613&chatId=816becd7-7ba1-4bf7-9883-9869fd3bcf48" target="_blank" class="l">
+                    <img src="./img/temp/img_03.png" alt="" /> 立即咨询
+                  </a>
+                  <!-- <a href="#" target="_blank" class="r">
+                    自己搞不定，找专业设计师为您定制网站
+                  </a> -->
+                </p>
+              </div>
+            </div>
+          </li>
+          <li>
+            <div class="t">
+              <strong>标准版</strong>
+            </div>
+            <div class="c">
+              <div class="list">
+                <div>免费版+</div>
+                <div>去广告</div>
+                <div>网站展示功能</div>
+                <div>CDN加速 </div>
+                <div>7*24小时监控服务</div>
+              </div>
+              <div class="bt">
+                <div class="money">
+                  <sup>￥</sup>488 <span>/年</span>
                 </div>
                 <div class="btn">
                   <a href="http://www.xinnet.com/jianzhan/jianzhan-buy-detail.html?name=zzjz&type=standard" target="_blank" class="buy">立即购买</a>
@@ -56,26 +76,22 @@
           <li>
             <div class="t">
               <strong>企业版</strong>
-              <p>适合中小企业/形象展示/网站推广</p>
             </div>
             <div class="c">
               <div class="list">
-                <div>免费千套模板（PC站+手机站）</div>
-                <div>页面数量不限</div>
-                <div>送微信、支付宝小程序、支持公众号</div>
-                <div>支持中、英、日、韩、德、西、法、意......等10种语言</div>
-                <div>含服务器空间 </div>
-                <div>产品管理功能</div>
-                <div>万能表单（调查问卷/招聘/报名/投票等）</div>
-                <div>支持整站及页面SEO设置 </div>
-                <div>网站CDN加速</div>
-                <div>企业下载</div>
+                <div>标准版+</div>
+                <div>支持简、繁、英3种语言(三选一)</div>
+                <div>微信公众号端及托管</div>
+                <div>互动营销功能齐全</div>
+                <div>万能表单（调查问卷、投票等） </div>
                 <div>网站总空间50G</div>
-                <div>安全服务保障</div>
+                <div>支持整站及页面SEO设置</div>
+                <div>网站不收录，全额退款 </div>
+                <div>自动备份安全保障</div>
               </div>
               <div class="bt">
                 <div class="money">
-                  <sup>￥</sup>998 <span>/首年</span>
+                  <sup>￥</sup>988 <span>/年</span>
                 </div>
                 <div class="btn">
                   <a href="http://www.xinnet.com/jianzhan/jianzhan-buy-detail.html?name=zzjz&type=enterprise" target="_blank" class="buy">立即购买</a>
@@ -93,28 +109,24 @@
           </li>
           <li>
             <div class="t">
-              <strong>营销版</strong>
-              <p>适合中小企业形象展示/在线销售/在线获客/网站推广</p>
+              <strong>高级版</strong>
             </div>
             <div class="c">
               <div class="list">
-                <div>免费千套模板（PC站+手机站）</div>
-                <div>页面数量不限</div>
-                <div>送微信、支付宝小程序、支持公众号</div>
-                <div>支持中、英、日、韩、德、西、法、意......等10种语言</div>
-                <div>含服务器空间 </div>
-                <div>产品管理功能</div>
-                <div>万能表单（调查问卷/招聘/报名/投票等）</div>
-                <div>支持整站及页面SEO设置 </div>
-                <div>网站CDN加速</div>
-                <div>企业视频、文件下载</div>
-                <div>网站总空间不限</div>
-                <div>会员管理、微信营销、轻电商功能</div>
-                <div>安全服务保障</div>
+                <div>营销版+</div>
+                <div>支持简、繁、英、日等10种语言(十选一)</div>
+                <div>客户管理、会员管理功能齐全</div>
+                <div>赠送企业视频、文件下载空间</div>
+                <div>赠送微信小程序 </div>
+                <div>网站总空间扩容至100G</div>
+                <div>资源流量保障扩容至100G/月</div>
+                <div>网站页面数量扩充至100个 </div>
+                <div>全年稳定性SLA承诺99.95% </div>
+                <div>数据安全保证99.9999%  </div>
               </div>
               <div class="bt">
                 <div class="money">
-                  <sup>￥</sup>1988 <span>/首年</span>
+                  <sup>￥</sup>1988 <span>/年</span>
                 </div>
                 <div class="btn">
                   <a href="http://www.xinnet.com/jianzhan/jianzhan-buy-detail.html?name=zzjz&type=market" target="_blank" class="buy">立即购买</a>
@@ -132,12 +144,107 @@
           </li>
         </ul>
       </div>
+      <div class="t">
+        <h3>设计套餐</h3>
+      </div>
+      <div class="table">
+        <table>
+          <thead>
+            <tr>
+              <th class="col1">服务项目</th>
+              <th>标准搭建服务</th>
+              <th>高级搭建服务</th>
+              <th>专业搭建服务</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td class="col1">专业网站建设方案</td>
+              <td>√ </td>
+              <td>√ </td>
+              <td>√ </td>
+            </tr>
+            <tr>
+              <td class="col1">设计师级别</td>
+              <td>高级设计师</td>
+              <td>资深设计师</td>
+              <td>资深设计师</td>
+            </tr>
+            <tr>
+              <td class="col1">制作开发</td>
+              <td>高级设计师</td>
+              <td>资深设计师</td>
+              <td>资深设计师</td>
+            </tr>
+            <tr>
+              <td class="col1">网站栏目</td>
+              <td>6栏目</td>
+              <td>15栏目</td>
+              <td>25栏目</td>
+            </tr>
+            <tr>
+              <td class="col1">首页设计 按需设计</td>
+              <td><=4屏</td>
+              <td><=6屏</td>
+              <td><=8屏</td>
+            </tr>
+            <tr>
+              <td class="col1">页面量身设计</td>
+              <td>√ </td>
+              <td>√ </td>
+              <td>√ </td>
+            </tr>
+            <tr>
+              <td class="col1">轮播Banner设计数量</td>
+              <td>2个</td>
+              <td>3个</td>
+              <td>5个</td>
+            </tr>
+            <tr>
+              <td class="col1">图片处理（尺寸/水印）</td>
+              <td>20</td>
+              <td>60</td>
+              <td>100</td>
+            </tr>
+            <tr>
+              <td class="col1">产品/服务/网站信息录入数量</td>
+              <td>20</td>
+              <td>60</td>
+              <td>100</td>
+            </tr>
+            <tr>
+              <td class="col1">网站运营使用培训 </td>
+              <td>√ </td>
+              <td>√ </td>
+              <td>√ </td>
+            </tr>
+            <tr>
+              <td class="col1">SEO关键词设置</td>
+              <td>√ </td>
+              <td>√ </td>
+              <td>√ </td>
+            </tr>
+            <tr>
+              <td class="col1">服务过程透明化</td>
+              <td>√ </td>
+              <td>√ </td>
+              <td>√ </td>
+            </tr>
+            <tr>
+              <td class="col1">终身免费售后修改</td>
+              <td>X</td>
+              <td>12次/年</td>
+              <td>12次/年</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
     </div>
     <div class="section section_03">
       <a href="#">
       </a>
     </div>
-    <div class="section section_04">
+    <!-- <div class="section section_04">
       <div class="cont">
         <div class="t">
           <h3>轻松快速建站指南</h3>
@@ -146,12 +253,12 @@
         </div>
         <div class="c">
           <video width="875" height="440" controls autobuffer poster="./img/temp/img_06.png">
-              <!-- <source src="https://www.zhangxinxu.com/study/media/cat2.mp4" type="video/mp4"> -->
+              <source src="https://www.zhangxinxu.com/study/media/cat2.mp4" type="video/mp4">
               您的浏览器不支持 video 标签。
           </video>
         </div>
       </div>
-    </div>
+    </div> -->
     <div class="section section_05">
       <div class="cont">
         <div class="t">
@@ -178,6 +285,9 @@
             </li>
             <li>
                 <a href="http://www.qwxyy021201.cevke.cn" target="_blank"><img src="./img/index/img_12.png" alt=""></a>
+            </li>
+            <li class="more">
+                <a href="http://www.xinnet.com/jianzhan/zizhujianzhan-mbk.html" target="_blank">查看更多模板</a>
             </li>
           </ul>
         </div>
