--- a/siteTemp.html
+++ b/siteTemp.html
@@ -1,3 +1,10 @@
+<!--
+ * @Description: In User Settings Edit
+ * @Author: your name
+ * @Date: 2019-06-25 10:39:50
+ * @LastEditTime: 2019-08-28 13:48:55
+ * @LastEditors: Please set LastEditors
+ -->
 <!DOCTYPE html>
 <html>
   <head>
@@ -30,7 +37,7 @@
                   <sup>￥</sup>0 <span>/年</span>
                 </div>
                 <div class="btn">
-                  <a href="http://www.xinnet.com/jianzhan/jianzhan-buy-detail.html?name=zzjz&type=standard" target="_blank" class="buy">立即体验</a>
+                  <a href="http://www.xinnet.com/jianzhan/jianzhan-buy-detail.html?name=zzjz&type=free" target="_blank" class="buy">立即体验</a>
                 </div>
                 <p class="clear">
                   <a href="https://im.7x24cc.com/phone_webChat.html?accountId=N000000014613&chatId=816becd7-7ba1-4bf7-9883-9869fd3bcf48" target="_blank" class="l">
@@ -75,7 +82,7 @@
           </li>
           <li>
             <div class="t">
-              <strong>企业版</strong>
+              <strong>专业版</strong>
             </div>
             <div class="c">
               <div class="list">
@@ -86,7 +93,6 @@
                 <div>万能表单（调查问卷、投票等） </div>
                 <div>网站总空间50G</div>
                 <div>支持整站及页面SEO设置</div>
-                <div>网站不收录，全额退款 </div>
                 <div>自动备份安全保障</div>
               </div>
               <div class="bt">
