--- a/siteTemp.html
+++ b/siteTemp.html
@@ -113,7 +113,7 @@
             </div>
             <div class="c">
               <div class="list">
-                <div>营销版+</div>
+                <div>专业版+</div>
                 <div>支持简、繁、英、日等10种语言(十选一)</div>
                 <div>客户管理、会员管理功能齐全</div>
                 <div>赠送企业视频、文件下载空间</div>
@@ -378,7 +378,7 @@
             <li class="col0">增值服务</li>
             <li class="item col4">
               <span class="img"></span>
-              <strong>短息服务</strong>
+              <strong>短信服务</strong>
               <p>提供更好的验证码、通知、会员营销短信服务</p>
             </li>
             <li class="item col5">
